# roll-dice

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
benches/: basic.rs
benches/js/: index.js  package-lock.json  package.json
js/: README.md  index.d.ts  index.d.ts.map  index.js  package-lock.json  package.json
src/: error.rs  eval.rs  lib.rs  macros.rs  main.rs  parse.rs  rng.rs  tests.rs
