[workspace]
members = ["bin/roll"]

[workspace.dependencies]
roll-dice = { path = "." }
rand = { version = "0.8.5", default-features = false }

[package]
name = "roll-dice"
version = "0.2.2"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "evaluate standard dice roll notation"
repository = "https://github.com/jprochazk/dice-roll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.12.1"
rand = { workspace = true, features = ["small_rng"] }

wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = "fat"
opt-level = "s"
debug = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "basic"
harness = false


